# ai-auto-deploy

./: .gitignore  README.md  deploy.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  sitemap.xml
frontend/src/: App.vue  main.js  style.css
public/: manifest.json  sw.js
src/: __init__.py  cli.py
web/: database.py  main.py  requirements.txt
web/api/: admin.py  auth.py  deploy.py  fix.py  generate.py  payment.py  servers.py
